# layerrail-lrail

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .tool-versions  AGENTS.md  CODEOWNERS  LICENSE.md  README.md  SECURITY.md  Taskfile.yml  buf.gen.yaml  buf.yaml  compose.yml  go.mod  go.sum  go.work.sum  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redocly.yaml
services/detector/: README.md  pyproject.toml
services/detector/src/lrail_detector/: __init__.py  __main__.py  cli.py  engine.py  inventory.py  models.py  rules.py  workspaces.py
services/detector/src/lrail_detector/plugins/: __init__.py  base.py  docker.py  go.py  helpers.py  node.py  python.py  ruby.py  static.py
services/detector/tests/: __init__.py  test_contract.py  test_corpus.py  test_detector.py  test_inventory_boundaries.py  test_plugin_branches.py  test_workspace_branches.py
services/detector/tests/fixtures/: cases.json
services/detector/tests/fixtures/adversarial-conflicting-locks/: package.json
services/detector/tests/fixtures/adversarial-procfile-shell/: Procfile
services/detector/tests/fixtures/docker-service/: Dockerfile
services/detector/tests/fixtures/go-multi/: go.mod  go.sum
services/detector/tests/fixtures/go-multi/cmd/api/: main.go
services/detector/tests/fixtures/go-multi/cmd/worker/: main.go
services/detector/tests/fixtures/node-monorepo/: package.json
services/detector/tests/fixtures/node-monorepo/apps/api/: package.json
services/detector/tests/fixtures/node-monorepo/apps/web/: package.json
services/detector/tests/fixtures/node-monorepo/apps/worker/: package.json
services/detector/tests/fixtures/python-fastapi/: main.py  pyproject.toml
services/detector/tests/fixtures/rails-worker/: Gemfile
services/detector/tests/fixtures/rails-worker/config/: application.rb
services/detector/tests/fixtures/static-site/: index.html
services/detector/tools/: __init__.py  generate_schema.py
(+2562 files in other folders)
