[project]
name = "lrail-detector"
version = "0.2.0"
description = "Deterministic non-executing framework detector for immutable Lrail source snapshots"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "Oluwamayowa Oladosu" }]
dependencies = ["pydantic==2.13.4"]

[project.scripts]
lrail-detector = "lrail_detector.cli:main"

[dependency-groups]
dev = [
  "hypothesis==6.156.6",
  "jsonschema==4.25.1",
  "mypy==2.2.0",
  "pip-audit==2.9.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lrail_detector"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=lrail_detector --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"src/lrail_detector/inventory.py" = ["C901", "PLR0912", "PLR0915"]
"src/lrail_detector/plugins/base.py" = ["PLR0913"]
"src/lrail_detector/plugins/docker.py" = ["C901", "PLR0912", "PLR0915"]
"src/lrail_detector/plugins/go.py" = ["C901", "PLR0912", "PLR0915"]
"src/lrail_detector/plugins/node.py" = ["C901", "PLR0912", "PLR0915"]
"src/lrail_detector/plugins/python.py" = ["C901", "PLR0912", "PLR0915", "S104"]
"src/lrail_detector/plugins/ruby.py" = ["C901", "PLR0912", "PLR0915", "S104"]
"src/lrail_detector/workspaces.py" = ["C901", "PLR0912", "PLR0915"]
"tests/fixtures/**/*.py" = ["ALL"]
"tests/**/*.py" = ["ANN", "D", "PLR2004", "S101", "TC003"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
